--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "hi-directive",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
+  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
